tests/rosetta/out/Smalltalk/abelian-sandpile-model-identity.out
/tmp/abelian-sandpile-model-identity.st:7: parse error, expected ']'
